# bifrost-usd

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  SECURITY.md
examples/: CMakeLists.txt  README.md
examples/maya_plugin/: CMakeLists.txt  bifrostUSDExamples.mod.in
examples/maya_plugin/plug-ins/: bifrostUSDExamples.py.in
examples/maya_plugin/python/bifrost_usd/: author_usd_graph.py  constants.py  create_stage.py  dag_path_observer.py  graph_api.py  maya_commands.py  maya_main_window_menu.py  maya_usd_custom_attributes.py  node_def.py  prim_path_observer.py  runtime_cmds.py
examples/maya_plugin/scripts/: USDUserMenuProc.mel
examples/maya_plugin/test/: CMakeLists.txt  testAssetTemplate.py  testBifrostStageCmds.py  testComponentCreator.py  testComponentCreatorGraphOnly.py  testComponentMaterialBinding.py  testCreateComponentGraph.py  testGetComponentMetadata.py  testImportMayaModel.py  testImportMayaModelInNewStage.py  testImportMayaVariants.py  testLookdevWorkflow.py  testMaterialHintAttribute.py  testModelExporter.py  testPatternMatching.py  testPrimPath.py  testValidateGeo.py
examples/maya_plugin/test/resources/: capsule.usd  capsule_colors.usd  simple_point_instancer.ma  simple_point_instancer.usd  test_pattern_matching_01.ma
examples/packs/: bifrost_config.json
examples/packs/bifrost-component-creator/: bifrost_config.json
examples/packs/bifrost-component-creator/compounds/: apply_look.json  apply_look_v2.json  apply_usd_material_bindings.json  create_simple_model.json  create_stage_at_model_site.json  create_usd_component.json  define_arnold_usd_mesh_disp.json  define_arnold_usd_mesh_primvars.json  define_arnold_usd_mesh_subdiv.json  define_usd_look_variant.json  define_usd_material_binding.json  define_usd_model_variant.json  evaluate_scalar_expression.json  evaluate_string_expression.json  extract_attribute_expression_part.json  match_attribute_expression.json  match_by_char_or_wildcard.json  match_prim_path.json  parse_expression.json  path_expression.json  resolve_bindings.json
examples/packs/bifrost-component-creator/docs/: create_usd_component.md
examples/packs/misc-compounds/: bifrost_config.json
examples/packs/misc-compounds/compounds/: add_to_stage_in_variant.json  create_lookdev_workflow_stage.json  create_mesh_from_usd_geom_subset.json  create_sublayer.json  define_prim_hierarchy.json  define_usd_camera.json  inspect_usd_variants.json  usd_collection_schema.json  usd_string_paths_to_array.json
src/graphs/: CMakeLists.txt
src/graphs/Glossary/: CMakeLists.txt
src/graphs/Glossary/attribute_block/: attribute_block.json  attribute_block_docs_ENU.md
src/graphs/Glossary/edit_target/: edit_target.json  edit_target_docs_ENU.md
src/graphs/Glossary/inherits/: inherits.json  inherits_docs_ENU.md
src/graphs/Glossary/prim/: prim.json  prim_docs_ENU.md
src/graphs/Rigging/: CMakeLists.txt
src/graphs/create_point_instancer_from_usd_file/: create_point_instancer_from_usd_file.json  create_point_instancer_from_usd_file_docs_ENU.md  create_point_instancer_from_usd_file_example.ma
src/graphs/geo_subset/: geo_subset.json  geo_subset_docs_ENU.md  geo_subset_example.ma
src/graphs/robot_with_purpose/: Robot_mod_v001.usd  robot_with_purpose.json  robot_with_purpose_docs_ENU.md  robot_with_purpose_example.ma
src/resources/docs/: CMakeLists.txt  USD_Attribute_add_attribute_connection.md  USD_Attribute_block_attribute.md  USD_Attribute_clear_attribute.md  USD_Attribute_clear_attribute_connections.md  USD_Attribute_create_prim_attribute.md  USD_Attribute_create_primvar.md  USD_Attribute_define_usd_attribute.md  USD_Attribute_define_usd_display_color.md  USD_Attribute_define_usd_transform.md  USD_Attribute_get_attribute_metadata.md  USD_Attribute_get_prim_attribute.md  USD_Attribute_get_prim_attribute_connections.md  USD_Attribute_get_prim_attribute_data.md  USD_Attribute_get_prim_attribute_type.md  USD_Attribute_remove_attribute_connection.md  USD_Attribute_set_attribute_metadata.md  USD_Attribute_set_prim_attribute.md  USD_Collection_get_all_collection_names.md  USD_Collection_get_excludes_paths.md  USD_Collection_get_includes_paths.md  USD_Collection_get_or_create_collection.md  USD_Layer_add_sublayer.md  USD_Layer_create_layer.md  USD_Layer_create_usd_layer.md  USD_Layer_duplicate_layer.md  USD_Layer_export_layer_to_file.md  USD_Layer_export_layer_to_string.md  USD_Layer_get_layer.md  USD_Layer_get_layer_display_name.md  USD_Layer_get_layer_file_path.md  USD_Layer_get_layer_identifier.md  USD_Layer_get_root_layer.md  USD_Layer_get_sublayer_paths.md  USD_Layer_open_layer.md  USD_Layer_replace_layer.md  USD_Layer_set_layer_permission.md  USD_PointInstancer_delete_usd_point_instances.md  USD_PointInstancer_get_usd_point_instancer_attributes.md  USD_PointInstancer_replace_usd_point_instancer_proto.md  (+102 more)
test/: CMakeLists.txt
test/BifrostUsd/: CMakeLists.txt  testBifrostUsdStage.cpp
test/compounds/IO/: read_usd_meshes_with_color_test00.json
test/compounds/integration/: landscape_generator_1_0_0.json  load_all_compounds_test00.json
test/compounds/layer/: resolve_layer_index_test00.json
test/compounds/pointinstancer/: delete_usd_point_instances_test00.json
test/compounds/prim/: create_geom_subset_test00.json  define_usd_skeleton_animation_test00.json  define_usd_skeleton_test00.json
test/compounds/stage/: add_to_stage_component_hierarchy00.json  add_to_stage_create_variants_test00.json  add_to_stage_test00.json
test/compounds/variantset/: define_variants_test00.json  select_variants_test00.json
test/nodedefs/: CMakeLists.txt  testAttributeNodeDefs.cpp  testLayerNodeDefs.cpp  testPrimNodeDefs.cpp  testStageNodeDefs.cpp  testVariantSetNodeDefs.cpp  test_graphs.py
test/resources/: attribute_connection_test1.usda  tree.usd
test/taskDescriptions/: tasks_add_to_stage_create_variants.json  tasks_add_to_stage_hierarchy.json  tasks_create_geom_subset.json  tasks_define_usd_skeleton.json  tasks_define_usd_skeleton_animation.json  tasks_delete_usd_point_instances.json  tasks_resolve_layer_index.json  tasks_variants.json
(+215 files in other folders)
